Agrego un componente base para gestionar las notificaciones con websocket

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "material-ui-confirm": "^3.0.9",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4"
   },
